Login is now possible

--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ nunit-*.xml
 !/.vs/extensions.json
 
 # Miscellaneous
-/.angular/cache
+*/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
@@ -100,3 +100,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+#Backend
+/backend/Migrations
