--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthSettings": {
+    "securityKey": "3$!8EI,g3-+g[%O}%soc:Vy5S}W1676d|2@iOdsX^>^_9mD`k6",
+    "validAudience": "https://localhost:5400",
+    "validIssuer": "http://localhost:5204"
+  }
 }
